Finalize API project and last updates.
